test/cli/no-error-count/no-error-count.out
-e:2: Parse Error: unexpected token: syntax error http://go/e/2001
     2 |# typed: true
                    ^
